--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ minecraft_version = 1.21.4
 architectury_api_version = 15.0.1
 fabric_loader_version = 0.16.10
 fabric_api_version = 0.118.0+1.21.4
-neoforge_version = 21.4.9-beta
+neoforge_version = 21.4.123
 
 # GeckoLib
 gecko_lib_fabric_version=geckolib-fabric-1.21.4:4.8.4
